# ethercat_ros_configurator

./: CMakeLists.txt  package.xml  readme.md
config/: setup.yaml
config/device_configurations/: maxon.yaml  maxon_eyesim_small.yaml  maxon_gear.yaml  nanotec.yaml  nanotec_linear.yaml  nanotec_rotary.yaml  xeryon.yaml
docs/: api.md
include/ethercat_ros_configurator/: EthercatDeviceConfigurator.hpp  EthercatDeviceRos.hpp  EthercatDeviceUtils.hpp
launch/: target_tracking.launch  test.launch  test_motor_start.launch  test_reference.launch
scripts/: EthercatRosNode.cpp  blank.py  inverse_kinematic.py  motor_msg_conversion.py  test_reference_generator.py
src/ethercat_ros_configurator/: EthercatDeviceConfigurator.cpp  EthercatDeviceRos.cpp  Maxon.cpp  Nanotec.cpp  Xeryon.cpp
test_data/: nanotec_motor1_2024-04-23_08-19-07_data.pkl  nanotec_motor1_2024-04-23_08-26-17_data.pkl  nanotec_motor1_2024-04-24_06-09-53_data.pkl  nanotec_motor1_2024-04-25_04-26-44_data.pkl  nanotec_motor1_2024-04-25_04-28-04_data.pkl  nanotec_motor1_2024-04-25_04-29-46_data.pkl  nanotec_motor1_2024-04-25_04-32-46_data.pkl  nanotec_motor1_2024-04-25_05-26-47_data.pkl  nanotec_motor1_2024-04-30_06-32-55_data.pkl  nanotec_motor2_2024-04-23_08-19-07_data.pkl  nanotec_motor2_2024-04-23_08-26-17_data.pkl  nanotec_motor2_2024-04-24_06-09-52_data.pkl  nanotec_motor2_2024-04-25_04-26-44_data.pkl  nanotec_motor2_2024-04-25_04-28-04_data.pkl  nanotec_motor2_2024-04-25_04-29-47_data.pkl  nanotec_motor2_2024-04-25_04-32-46_data.pkl  nanotec_motor2_2024-04-25_05-26-47_data.pkl  nanotec_motor2_2024-04-30_06-32-55_data.pkl
