<?xml version="1.0"?>
<package format="2">
  <name>ethercat_ros_configurator</name>
  <version>1.0.0</version>
  <description>The ethercat_ros_configurator package</description>
  <maintainer email="">Neelaksh Singh</maintainer>
  <maintainer email="">Claas Ehmke</maintainer>
  <maintainer email="">Jasan Zughaibi</maintainer>
  <license>BSD-3-Clause</license>
  <url type="website">https://github.com/Ophthorobotics/ethercat_ros_configurator</url>
  <author email="">Neelaksh Singh</author>
  <depend>roscpp</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ethercat_motor_msgs</build_depend>
  <!-->
      Optional dependencies.
      Any single drive sdk or any combination of sdks may be used.
  <-->
  <depend>maxon_epos_ethercat_sdk</depend>
  <depend>nanotec_ethercat_sdk</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
